Added AVAILABLE_LOCALES env var in ofn-install

--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -9,6 +9,7 @@ TIMEZONE: {{ timezone }}
 DEFAULT_COUNTRY_CODE: {{ country_code }}
 # Locale for translation.
 LOCALE: {{ locale }}
+AVAILABLE_LOCALES: {{ available_locales }}
 
 # Find currency codes at http://en.wikipedia.org/wiki/ISO_4217.
 CURRENCY: {{ currency }}
