Add mail settings' env vars to unicorn_user

--- a/roles/unicorn_user/templates/defaults.j2
+++ b/roles/unicorn_user/templates/defaults.j2
@@ -3,3 +3,9 @@ RAILS_ENV={{ rails_env }}
 {% if skylight_authentication is defined %}
   SKYLIGHT_AUTHENTICATION={{ skylight_authentication }}
 {% endif %}
+
+MAIL_HOST={{ mail_host }}
+MAIL_PORT={{ mail_port }}
+SMTP_USERNAME={{ smtp_username }}
+SMTP_PASSWORD={{ smtp_password }}
+DOMAIN={{ domain }}
