Differentiate MAIL_DOMAIN from plain DOMAIN
This way we can have katuma.org as the mail domain and
staging.katuma.org as web domain.

--- a/roles/unicorn_user/templates/defaults.j2
+++ b/roles/unicorn_user/templates/defaults.j2
@@ -4,8 +4,8 @@ RAILS_ENV={{ rails_env }}
   SKYLIGHT_AUTHENTICATION={{ skylight_authentication }}
 {% endif %}
 
+MAIL_DOMAIN={{ mail_domain }}
 MAIL_HOST={{ mail_host }}
 MAIL_PORT={{ mail_port }}
 SMTP_USERNAME={{ smtp_username }}
 SMTP_PASSWORD={{ smtp_password }}
-DOMAIN={{ domain }}
