Make SKYLIGHT_AUTHENTICATION env var optional

--- a/roles/unicorn_user/templates/defaults.j2
+++ b/roles/unicorn_user/templates/defaults.j2
@@ -1,2 +1,5 @@
 RAILS_ENV={{ rails_env }}
-SKYLIGHT_AUTHENTICATION={{ skylight_authentication }}
+
+{% if skylight_authentication is defined %}
+  SKYLIGHT_AUTHENTICATION={{ skylight_authentication }}
+{% endif %}
