--- a/roles/semaphore_deployment/templates/sudoers.j2
+++ b/roles/semaphore_deployment/templates/sudoers.j2
@@ -1,2 +1,2 @@
-# Grant {{ deployment_user }} sudo access for running Ansible
-{{ deployment_user }} ALL=(ALL) NOPASSWD: /usr/bin/ansible-playbook
+# Grant {{ deployment_user }} sudo access for for deploy script
+{{ deployment_user }} ALL=(ALL) NOPASSWD: /home/{{ deployment_user }}/deploy
