Bash code quality improvements
Added with github suggested changes UI

Co-Authored-By: Matt-Yorkley <9029026+Matt-Yorkley@users.noreply.github.com>

--- a/roles/semaphore_deployment/templates/deploy.j2
+++ b/roles/semaphore_deployment/templates/deploy.j2
@@ -1,6 +1,7 @@
 #!/bin/bash
 
-branch=$@
+set -e
+branch="$1"
 allowed=^[a-zA-Z0-9._/\-]+$
 
 # Given branch name must be a single string with no spaces,
@@ -12,6 +13,6 @@ then
   exit 1
 fi
 
-cd /home/{{ deployment_user }}/ofn-install
+cd "/home/{{ deployment_user }}/ofn-install"
 
 ansible-playbook playbooks/deploy.yml --limit {{ ansible_limit }} --connection local -e "git_repo=https://github.com/openfoodfoundation/openfoodnetwork.git git_version=$branch @/home/ofn-admin/secrets.yml"
