Remove all traces of bugsnag initializer
This has been moved to the app's `config/initializers/` instead where it
doesn't need neither templates nor symlink. It's just about providing
the BUGSNAG_API_KEY env var, which is set in both the unicorn service
and `/etc/default/openfoodnetwork`.

--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -26,3 +26,5 @@ STRIPE_CLIENT_ID: {{ stripe_client_id }}
 STRIPE_INSTANCE_SECRET_KEY: {{ stripe_instance_secret_key }}
 STRIPE_INSTANCE_PUBLISHABLE_KEY: {{ stripe_instance_publishable_key }}
 STRIPE_ENDPOINT_SECRET: {{ stripe_endpoint_secret }}
+
+BUGSNAG_API_KEY: {{ bugsnag_key }}
