--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -18,13 +18,17 @@ CHECKOUT_ZONE: {{ checkout_zone }}
 
 GOOGLE_MAPS_API_KEY: {{ google_maps_api_key }}
 
+{% if s3_backups_bucket is defined %}
 S3_BACKUPS_BUCKET: {{ s3_backups_bucket }}
 S3_ACCESS_KEY: {{ s3_access_key }}
 S3_SECRET: {{ s3_secret }}
+{% endif %}
 
 STRIPE_CLIENT_ID: {{ stripe_client_id }}
 STRIPE_INSTANCE_SECRET_KEY: {{ stripe_instance_secret_key }}
 STRIPE_INSTANCE_PUBLISHABLE_KEY: {{ stripe_instance_publishable_key }}
 STRIPE_ENDPOINT_SECRET: {{ stripe_endpoint_secret }}
 
+{% if bugsnag_key is defined %}
 BUGSNAG_API_KEY: {{ bugsnag_key }}
+{% endif %}
