Set staging servers to update themselves

--- a/roles/semaphore_deployment/templates/deploy.j2
+++ b/roles/semaphore_deployment/templates/deploy.j2
@@ -15,4 +15,16 @@ fi
 
 cd "/home/{{ deployment_user }}/ofn-install"
 
+# Pull any recent ofn-install updates
+git pull
+
+# Update community roles if the requirements have changed
+if $(ansible-galaxy install -r bin/requirements.yml 2>&1 | grep -q "change version"); then
+    echo "Updating community roles..."
+    ansible-galaxy install -r bin/requirements.yml --force
+else
+    echo "All community roles are up to date"
+fi
+
+# Deploy
 ansible-playbook playbooks/deploy.yml --limit {{ ansible_limit }} --connection local -e "git_repo=https://github.com/openfoodfoundation/openfoodnetwork.git git_version=$branch @/home/ofn-admin/secrets.yml"
