--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -18,10 +18,17 @@ CHECKOUT_ZONE: {{ checkout_zone }}
 
 GOOGLE_MAPS_API_KEY: {{ google_maps_api_key }}
 
-{% if s3_backups_bucket is defined %}
-S3_BUCKET: {{ s3_backups_bucket }}
+{% if s3_access_key is defined %}
 S3_ACCESS_KEY: {{ s3_access_key }}
+{% endif %}
+{% if s3_secret is defined %}
 S3_SECRET: {{ s3_secret }}
+{% endif %}
+{% if s3_backups_bucket is defined %}
+S3_BACKUPS_BUCKET: {{ s3_backups_bucket }}
+{% endif %}
+{% if s3_images_bucket is defined %}
+S3_BUCKET: {{ s3_images_bucket }}
 {% endif %}
 
 STRIPE_CLIENT_ID: {{ stripe_client_id }}
