Allow passing a specific AWS region to S3 settings
No need to rely on the default region Db2fog might specify. Needed for https://github.com/openfoodfoundation/openfoodnetwork/pull/3763.

--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -24,6 +24,9 @@ S3_ACCESS_KEY: {{ s3_access_key }}
 {% if s3_secret is defined %}
 S3_SECRET: {{ s3_secret }}
 {% endif %}
+{% if s3_region is defined %}
+S3_REGION: {{ s3_region }}
+{% endif %}
 {% if s3_backups_bucket is defined %}
 S3_BACKUPS_BUCKET: {{ s3_backups_bucket }}
 {% endif %}
