Make Datadog monitor all OFN's database tables
This way we avoid hardcoding the table names and all schema changes will
be reflected in Datadog upon provisioning. I have asked Datadog to
implement this an agent's feature (get all tables in database by
default) but I have a little confidence this request will ever make it
through.

--- a/roles/datadog/templates/dd-postgres.j2
+++ b/roles/datadog/templates/dd-postgres.j2
@@ -11,6 +11,10 @@ instances:
     tags:
       - "host:{{ inventory_hostname }}"
     collect_activity_metrics: true
+    relations:
+    {% for relation in openfoodnetwork_relations.stdout_lines %}
+      - "{{ relation }}"
+    {% endfor %}
 
 {% if enable_datadog_logging is defined %}
 logs:
