Set feature toggle via re-usable env var block
Introducing a new Ansible variable with an arbitrary text block to
define custom environment variables for the application. This can be
used for feature toggles and other variables in the future.

--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -46,4 +46,4 @@ STRIPE_ENDPOINT_SECRET: {{ stripe_endpoint_secret }}
 BUGSNAG_API_KEY: {{ bugsnag_key }}
 {% endif %}
 
-OFN_FEATURE_CONNECT_AND_LEARN: "{{ feature_connect_and_learn | default('false') }}"
+{{ custom_application_env_vars | default('') }}
