Enable use of nginx or postgres logging separately

--- a/roles/datadog/templates/dd-nginx.j2
+++ b/roles/datadog/templates/dd-nginx.j2
@@ -7,7 +7,7 @@ instances:
     tags:
       - "host:{{ inventory_hostname }}"
 
-{% if enable_datadog_logging is defined %}
+{% if enable_nginx_logging is defined %}
 logs:
   - type: file
     path: /var/log/nginx/access.log
