--- a/roles/app/templates/application.yml.j2
+++ b/roles/app/templates/application.yml.j2
@@ -21,8 +21,9 @@ GOOGLE_MAPS_API_KEY: {{ google_maps_api_key }}
 ADMIN_EMAIL: {{ admin_email }}
 ADMIN_PASSWORD: {{ admin_password }}
 
-DATADOG_RAILS_APM: {{ enable_rails_apm | default('false') }}
-
+{% if enable_rails_apm is defined %}
+DATADOG_RAILS_APM: {{ enable_rails_apm }}
+{% endif %}
 {% if s3_access_key is defined %}
 S3_ACCESS_KEY: {{ s3_access_key }}
 {% endif %}
