Increase max size of cache entries so products cache can be larger than the default 1MB
In bug #4256 447 products were taking 1MB of space, we change max to 4MB so we can handle at least 2k products

This problem will need to be addressed differently when the product list is paginated. We will probably be able to revert this change as each page will never take more than 1MB

--- a/roles/common/templates/memcached.conf.j2
+++ b/roles/common/templates/memcached.conf.j2
@@ -45,3 +45,6 @@ logfile /var/log/memcached.log
 
 # Increase number of threads from default of 4
 -t 6
+
+# Increase max of size of cache entries # 10M will contain around 2k products
+-I 4M
