Add memcached value max size to Rails app config

--- a/roles/unicorn_user/templates/defaults.j2
+++ b/roles/unicorn_user/templates/defaults.j2
@@ -26,3 +26,5 @@ OFN_DB_USERNAME={{ db_user }}
 {% if db_password is defined %}
 OFN_DB_PASSWORD={{ db_password }}
 {% endif %}
+
+MEMCACHED_VALUE_MAX_MEGABYTES={{ memcached_value_max_megabytes }}
