--- a/roles/webserver/templates/unicorn.service.j2
+++ b/roles/webserver/templates/unicorn.service.j2
@@ -18,7 +18,7 @@ PIDFile={{ unicorn_pid }}
 
 ExecStart={{ bundle_path }} exec unicorn -D -c {{ unicorn_config }} -E {{ rails_env }}
 ExecStop=/bin/kill -QUIT $MAINPID
-ExecReload=/bin/kill -HUP $MAINPID
+ExecReload=/bin/kill -USR2 $MAINPID
 
 [Install]
 WantedBy=multi-user.target
