--- a/roles/webserver/templates/unicorn_environment.j2
+++ b/roles/webserver/templates/unicorn_environment.j2
@@ -1,2 +1,5 @@
 RAILS_ENV={{ rails_env }}
+{% if skylight_authentication is defined %}
+SKYLIGHT_AUTHENTICATION={{ skylight_authentication }}
+{% endif %}
 {{ unicorn_env_vars | default('') }}
